# DRED

./: .gitignore  CLAUDE.md  README.md  cleanup.sh  main.py  prompt_engineering_report.md  pyproject.toml  run  sandwich_prompting_report.md
dify-setup/: .env  README.md  SPEC.md  docker-compose.yaml
dify-setup/nginx/conf.d/: default.conf
dify_setup/: .env  README.md  docker-compose.yaml  nginx.conf
map_reduce/: aggregate_qa.py  document_indexer.py  evaluate_qa.py  execution_manager.py  single_doc_qa.py
map_reduce/prompts/aggregate_qa/: baseline.txt  consensus.txt  direct_extraction.txt  focused.txt  sandwich.txt  structred.txt
map_reduce/prompts/single_qa/: baseline.txt  comprehensive.txt  detailed_search.txt  direct.txt  focused.txt  legal_sandwich.txt  qualitative.txt  sandwich.txt  strict.txt  structured.txt  targeted.txt
models/gpt-oss-20b/: Modelfile  Modelfile.Q4_K_M  Modelfile.Q8_0
models/llama-elyzsa-jp-8b/: Modelfile
models/llama3.1-swallow-8b/: Modelfile
models/mistral-nemo-jp/: Modelfile  Modelfile.Q4_K_M  Modelfile.Q8_0
reports/: map_reduce_approach.md  quantization_comparison_report.md
scripts/: analyze_documents.py  analyze_documents_with_tokens.py  combine_benchmark_results.py  download_models.sh  run_benchmark_qa.py  setup_all.sh  setup_dify.sh  setup_ollama.sh
